# runescape3-api-wrapper

./: .flake8  .gitignore  LICENSE  Makefile  README.md  isort.cfg  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
rs3_api/hiscores/: __init__.py  exceptions.py  hiscore.py  types.py
rs3_api/hiscores/clan_hiscore/: __init__.py  clan_members_hiscore.py
rs3_api/hiscores/seasonal_hiscore/: __init__.py  seasonal_details_hiscore.py  user_seasonal_hiscore.py
rs3_api/hiscores/user_hiscore/: __init__.py  user_hiscore.py
rs3_api/utils/: const.py  xp_table.py
